docs: benchmark results + model optimization sprint 2026-06-04